--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [23.10.0, 22.14.0]
+        node-version: ['23.10.0', '22.14.0']
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
